# ModernOpenGL_Practice

./: .gitignore  CMakeLists.txt  imgui.ini  main.cpp
res/shaders/: Axis.shader  Basic.shader
src/: IndexBuffer.cpp  IndexBuffer.h  ObjLoader.cpp  ObjLoader.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
